tests/syntax/good/testfile-generics-1.rs

fn f <T> (x : T) -> T {
    x
}


fn main() {
    let x = f(1i32);
    let x = f(1i64);
}