tests/syntax/bad/testfile-coercion-1.rs


fn main() {
    let x = 1i32 asusize;
}